# Shorekeeper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile-builder  Dockerfile-service  LICENSE  README.md  builder.bat  builder.sh  docker-compose-hotpatch.yml  docker-compose.yml
assets/config/: index.json
assets/config/e66lKLx7RnUf9QlkMCGaW0jdyjRV1weo/: index.json
assets/config/rODM5DcqOhYsIOtsEuZWNGFa2guZgl57/: index.json
assets/config/samples/: cn_beta_1.3.0.json
assets/config/u4S3uXaif7gNKnNGnbZ6WnW67vWFmQgd/: index.json
assets/hotpatch/prod/Windows/: config.json
assets/logic/BinData/: BaseProperty.json  ExploreTools.json  FunctionCondition.json  InstanceDungeon.json  RoleInfo.json  WeaponConf.json
assets/logic/json/: BaseProperty.json  ExploreTools.json  FunctionCondition.json  InstanceDungeon.json  RoleInfo.json  WeaponConf.json
common/: Cargo.toml
common/src/: config_util.rs  lib.rs  logging.rs  splash.rs  time_util.rs
config-server/: Cargo.toml
config-server/src/: main.rs
docker/: configserver.toml  gameserver.toml  gateway.toml  hotpatch.toml  loginserver.toml
docker/postgres/scripts/: 0_INIT.sql  1_PERMS.sql
game-server/: Cargo.toml  censorshipfix.js  gameserver.default.toml  uidfix.js  watermask-rr.js  watermask.js
game-server/src/: config.rs  gateway_connection.rs  main.rs  player_save_task.rs  service_message_handler.rs
game-server/src/logic/: mod.rs  thread_mgr.rs
game-server/src/logic/components/: attribute.rs  entity_config.rs  equip.rs  fsm.rs  mod.rs  monster_ai.rs  movement.rs  owner_player.rs  player_entity_marker.rs  position.rs  visibility.rs  vision_skill.rs  weapon.rs
game-server/src/logic/ecs/: component.rs  entity.rs  mod.rs  world.rs
game-server/src/logic/handler/: combat.rs  entity.rs  guide.rs  mail.rs  misc.rs  mod.rs  role.rs  scene.rs  skill.rs
game-server/src/logic/math/: mod.rs  transform.rs  vector.rs
game-server/src/logic/player/: basic_info.rs  explore_tools.rs  in_world_player.rs  location.rs  mod.rs  player_func.rs
game-server/src/logic/role/: formation.rs  mod.rs
game-server/src/logic/systems/: mod.rs  movement.rs
game-server/src/logic/utils/: entity_serializer.rs  load_role_info.rs  mod.rs  quadrant_util.rs  world_util.rs
game-server/src/session/: manager.rs  mod.rs
gateway-server/: Cargo.toml  gateway.default.toml
gateway-server/kcp/: Cargo.toml
gateway-server/kcp/src/: error.rs  kcp.rs  lib.rs
gateway-server/security/: client_public_key.pem
gateway-server/src/: config.rs  main.rs  udp_server.rs
gateway-server/src/handler/: client_message_handler.rs  client_push_handler.rs  client_request_handler.rs  game_server_connection.rs  mod.rs  service_message_handler.rs
gateway-server/src/session/: error.rs  manager.rs  mod.rs  util.rs
hotpatch-server/: Cargo.toml
hotpatch-server/src/: main.rs
login-server/: Cargo.toml  loginserver.default.toml
login-server/src/: config.rs  handler.rs  main.rs  schema.rs
shorekeeper-data/: Cargo.toml
shorekeeper-data/src/: base_property.rs  explore_tools.rs  function_condition.rs  instance_dungeon.rs  level_entity_config.rs  lib.rs  misc_data.rs  role_info.rs  weapon_conf.rs
shorekeeper-database/: Cargo.toml
shorekeeper-database/migrations/: 0001_tables.sql
shorekeeper-database/src/: config.rs  lib.rs  models.rs
shorekeeper-http/: Cargo.toml
shorekeeper-http/src/: config.rs  encryption.rs  lib.rs  util.rs
shorekeeper-network/: Cargo.toml
shorekeeper-network/src/: client.rs  config.rs  lib.rs  message.rs  server.rs
shorekeeper-protocol/: Cargo.toml  build.rs
shorekeeper-protocol/proto/: config.csv  data.proto  internal.proto  shorekeeper.proto
shorekeeper-protocol/shorekeeper-protocol-derive/: Cargo.toml
shorekeeper-protocol/shorekeeper-protocol-derive/src/: lib.rs
shorekeeper-protocol/src/: lib.rs  message.rs
shorekeeper-protokey/: Cargo.toml
shorekeeper-protokey/src/: config.rs  lib.rs
