[package]
name = "game-server"
edition = "2021"
version.workspace = true

[dependencies]
# Framework
tokio.workspace = true

# Serialization
serde.workspace = true

# Util
anyhow.workspace = true
thiserror.workspace = true
paste.workspace = true
dashmap.workspace = true
hex.workspace = true

# Tracing
tracing.workspace = true

# Internal
common.workspace = true
shorekeeper-data.workspace = true
shorekeeper-database.workspace = true
shorekeeper-network.workspace = true
shorekeeper-protocol.workspace = true
