[package]
name = "shorekeeper-protocol"
edition = "2021"
version.workspace = true

[dependencies]
byteorder.workspace = true
crc32fast.workspace = true
thiserror.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
shorekeeper-protocol-derive.workspace = true

[build-dependencies]
prost-build.workspace = true
quote = "1.0.35"
syn = "2.0.76"
prettyplease = "0.2.22"
