[package]
name = "kcp"
edition = "2021"
version.workspace = true

[features]
fastack-conserve = []
tokio = ["dep:tokio"]

[dependencies]
bytes = "1.6.0"
log = "0.4.21"
thiserror = "1.0.58"
tokio = { version = "1.37.0", optional = true, features = ["io-util"] }

[dev-dependencies]
time = "0.3.34"
rand = "0.8.5"

